--- a/vcbridge-admin/application/src/main/resources/templates/emailTemplate.html
+++ b/vcbridge-admin/application/src/main/resources/templates/emailTemplate.html
@@ -12,128 +12,117 @@
 	layout:decorator="layout">
 
 <div layout:fragment="content">
-	<div
-		class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
-		<br />
-		<div class="col-md-12">
-			<div class="card-group">
-				<div class="col-md-8">
-					<div class="card p-4">
-						<form action="#" th:action="@{/saveEmailTemplates}"
-							th:object="${emailTemplates}" method="post"
-							class="form-horizontal ">
-							<div class="card p-4">
-								<div class="card-header">
-									<strong>Email for meeting invitation</strong>
-								</div>
-
-								<div class="card-block">
-									<div>
-										<div class="form-group row"
-											th:classappend="${#fields.hasErrors('invitation.subject')} ? has-danger">
-											<label class="col-md-3 form-control-label"
-												for="invitation.subject">Subject</label>
-											<div class="col-md-9">
-												<input type="text" th:field="*{invitation.subject}"
-													class="form-control"
-													placeholder="Enter invitation subject.." />
-											</div>
-										</div>
-										<div class="form-group row"
-											th:classappend="${#fields.hasErrors('invitation.content')} ? has-danger">
-											<div class="col-md-12">
-												<textarea id="invitation-input"
-													th:field="*{invitation.content}" class="form-control"
-													placeholder="Enter invitation content.."></textarea>
-											</div>
-										</div>
-										<div id="editor">
-											<p>Hello World!</p>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="card p-4">
-								<div class="card-header">
-									<strong>Email for meeting cancellation</strong>
-								</div>
-								<div class="card-block">
-									<div>
-
-										<div class="form-group row"
-											th:classappend="${#fields.hasErrors('cancellation.subject')} ? has-danger">
-											<label class="col-md-3 form-control-label"
-												for="cancellation.subject">Subject</label>
-											<div class="col-md-9">
-												<input type="text" th:field="*{cancellation.subject}"
-													class="form-control"
-													placeholder="Enter cancellation subject.." />
-											</div>
-										</div>
-										<div class="form-group row"
-											th:classappend="${#fields.hasErrors('cancellation.content')} ? has-danger">
-											<div class="col-md-12">
-												<textarea id="cancellation-input"
-													th:field="*{cancellation.content}" class="form-control"
-													placeholder="Enter cancellation content"></textarea>
-											</div>
-										</div>
-
-
-									</div>
-
-								</div>
-
-
-
-							</div>
-							<div class="row pull-right">
-								<div class="col-4">
-									<button type="submit" name="reset" class="btn btn-primary px-4">Reset</button>
-								</div>
-								<div class="col-4">
-									<button type="submit" class="btn btn-primary px-2">Save
-										Changes</button>
-								</div>
-								<div class="col-4">
-									<a th:href="@{/listMeeting}" class="btn btn-primary px-2">Cancel</a>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="card p-6">
-						<div class="card-header">
-							<strong>Variables allowed in templates</strong>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				&nbsp;<br /> <br /> <br /> <br />
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8">
+				<form action="#" th:action="@{/saveEmailTemplates}"
+					th:object="${emailTemplates}" method="post"
+					class="form-horizontal ">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<strong>Meeting invitation email</strong>
 						</div>
-						<div class="card-block">
+
+						<div class="panel-body">
 							<div>
-								<ul>
-									<li><b>{email}</b> - user email</li>
-									<li><b>{meeting_date}</b> - date in dd/MM/yyyy format</li>
-									<li><b>{meeting_time}</b> - time in HH:mm ZZZ (timezone)
-										format</li>
-									<li><b>{meeting_duration_str}</b> - Meeting duration e.g., 2 hour(s) and 10 minutes </li>
-								</ul>
-								<ul>
-									<li><b>{meeting_username}</b> - the generated/unique
-										username for the participant</li>
-									<li><b>{meeting_password}</b> - the generated/unique
-										password for the participant</li>
-									<li><b>{user_first}</b> - user first name</li>
-									<li><b>{user_lastname}</b> - user last name</li>
-								</ul>
+								<div class="form-group"
+									th:classappend="${#fields.hasErrors('invitation.subject')} ? has-danger">
+									<label class="control-label col-sm-2" for="invitation.subject">Subject</label>
+									<div class="col-sm-10">
+										<input type="text" th:field="*{invitation.subject}"
+											class="form-control" placeholder="Enter invitation subject.." />
+									</div>
+								</div>
+								<div class="form-group"
+									th:classappend="${#fields.hasErrors('invitation.content')} ? has-danger">
+									<div class="col-md-12">
+										<textarea id="invitation-input"
+											th:field="*{invitation.content}" class="form-control"
+											placeholder="Enter invitation content.."></textarea>
+									</div>
+								</div>
 
+							</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<strong>Meeting cancellation email</strong>
+						</div>
+						<div class="panel-body">
+							<div>
+
+								<div class="form-group"
+									th:classappend="${#fields.hasErrors('cancellation.subject')} ? has-danger">
+									<label class="control-label col-sm-2"
+										for="cancellation.subject">Subject</label>
+									<div class="col-sm-10">
+										<input type="text" th:field="*{cancellation.subject}"
+											class="form-control"
+											placeholder="Enter cancellation subject.." />
+									</div>
+								</div>
+								<div class="form-group row"
+									th:classappend="${#fields.hasErrors('cancellation.content')} ? has-danger">
+									<div class="col-md-12">
+										<textarea id="cancellation-input"
+											th:field="*{cancellation.content}" class="form-control"
+											placeholder="Enter cancellation content"></textarea>
+									</div>
+								</div>
 
 
 							</div>
 
 						</div>
+					</div>
+					<div class="form-group pull-right">
+						<div class="col-md-12">
+							<button type="submit" name="reset" class="btn btn-danger">Reset</button>
+							<button type="submit" class="btn btn-primary">Save
+								Changes</button>
+							<a th:href="@{/listMeeting}" class="btn btn-default">Cancel</a>
+						</div>
+					</div>
+				</form>
+			</div>
+			<div class="col-md-4">
+				<div class="card p-6">
+					<div class="card-header">
+						<strong>Variables allowed in templates</strong>
+					</div>
+					<div class="card-block">
+						<div>
+							<ul>
+								<li><b>{email}</b> - user email</li>
+								<li><b>{meeting_date}</b> - date in dd/MM/yyyy format</li>
+								<li><b>{meeting_time}</b> - time in HH:mm ZZZ (timezone)
+									format</li>
+								<li><b>{meeting_duration_str}</b> - Meeting duration e.g.,
+									2 hour(s) and 10 minutes</li>
+							</ul>
+							<ul>
+								<li><b>{meeting_username}</b> - the generated/unique
+									username for the participant</li>
+								<li><b>{meeting_password}</b> - the generated/unique
+									password for the participant</li>
+								<li><b>{user_first}</b> - user first name</li>
+								<li><b>{user_lastname}</b> - user last name</li>
+							</ul>
 
 
+
+						</div>
 
 					</div>
+
+
+
 				</div>
 			</div>
 		</div>
