--- a/vcbridge-admin/application/src/main/resources/templates/createMeeting.html
+++ b/vcbridge-admin/application/src/main/resources/templates/createMeeting.html
@@ -14,10 +14,14 @@
 
 <div layout:fragment="content">
 
-	<div class="content">
-		<br />
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				&nbsp;<br /> <br /> <br />
+			</div>
+		</div>
 		<div class="col-md-8">
-			<div class="card p-4">
+			<div class="card">
 				<div class="header">
 					<h4 class="title">Create meeting</h4>
 					<p class="text-muted">Schedule a conference meeting</p>
@@ -30,7 +34,7 @@
 						method="post">
 						<input class="datetimeoutput" hidden="true" type="text"
 							th:field="*{start}" placeholder="2011-12-03T10:15:30+01:00" />
-						<div class="row">
+						<div class="row form-group">
 							<div class="col-md-12">
 								<div class="form-group has-feedback"
 									th:classappend="${#fields.hasErrors('start')} ? has-danger">
@@ -45,66 +49,76 @@
 							</div>
 						</div>
 
-						<div class="row">
+							<div class="row form-group">
 							<div class="col-md-5">
-								<div class="form-group has-feedback"
-									th:classappend="${#fields.hasErrors('start')} ? has-danger">
-									<label class="control-label">Date</label> <input
-										id="datepicker" data-provide="datepicker"
-										data-orientation="auto bottom" data-format="yy-mm-dd"
-										class="form-control border-input date col-sm-4 datetimeinput"
-										required="true" th:value="${{meetingForm.startDate}}"
-										placeholder="e.g., 05-31-2021" />
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="form-group has-feedback">
-									<label class="control-label">Time</label> <input
-										id="timepicker"
-										class="form-control border-input  bootstrap-timepicker timepicker col-sm-4"
-										data-provide="timepicker" data-template="dropdown"
-										data-minute-step="1" data-show-meridian="false" type="text"
-										required="true" th:value="${{meetingForm.startTime}}"
-										placeholder="e.g., 18:20" />
-									<div th:if="${#fields.hasErrors('start')}" th:errors="*{start}"
-										class="form-control-feedback">Error duration</div>
+								<div class="form-group"
+									th:classappend="${#fields.hasErrors('start')} ? 'has-error':''">
+									<label class="control-label">Date</label>
+									<div class="input-group">
+										<span class="input-group-addon"><i
+											class="glyphicon glyphicon-calendar"></i></span> <input
+											id="datepicker" data-provide="datepicker"
+											data-orientation="auto bottom" data-format="yy-mm-dd"
+											class="form-control border-input date col-sm-4 datetimeinput"
+											required="true" th:value="${{meetingForm.startDate}}"
+											placeholder="e.g., 05-31-2021" />
+									</div>
 								</div>
 							</div>
 							<div class="col-md-3">
-								<div class="form-group">
+								<div class="form-group" th:classappend="${#fields.hasErrors('start')}  ? 'has-error' :''">
+									<label class="control-label">Time</label>
+									<div class="input-group">
+										<span class="input-group-addon"><i
+											class="glyphicon glyphicon-time"></i></span> <input id="timepicker"
+											class="form-control border-input  bootstrap-timepicker timepicker col-sm-4"
+											data-provide="timepicker" data-template="dropdown"
+											data-minute-step="1" data-show-meridian="false" type="text"
+											required="true" th:value="${{meetingForm.startTime}}"
+											placeholder="e.g., 18:20" />
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="form-group" th:classappend="${#fields.hasErrors('timeZone')} or ${#fields.hasErrors('start')}  ? 'has-error' :''">
 									<label class="control-label">TimeZone</label>
 									<div class="input-group">
 										<span class="input-group-addon"><i
 											class="glyphicon glyphicon-globe"></i></span> <select
 											id="selecttimezone" name="timeZone"></select>
-										<div th:if="${#fields.hasErrors('timeZone')}"
-											th:errors="*{timeZone}" class="form-control-feedback">Error
-											timezone</div>
-										<div th:if="${#fields.hasErrors('start')}"
-											th:errors="*{start}" class="form-control-feedback">Error
-											duration</div>
 									</div>
+									<label th:if="${#fields.hasErrors('timeZone')}"
+										th:errors="*{timeZone}" class="text-danger">Error
+										TimeZone</label>
 								</div>
 							</div>
+							
 						</div>
+						<div class="form-group"><label th:if="${#fields.hasErrors('start')}"
+										th:errors="*{start}" class="control-label text-danger">Error
+										start</label></div>
 
 
 						<div class="row">
 							<div class="col-md-5">
-								<div class="form-group has-feedback"
+								<div class="form-group"
 									th:classappend="${#fields.hasErrors('duration')} ? has-danger">
-									<label class="control-label">Duration</label> <input
-										id="durationpicker"
-										class="form-control border-input bootstrap-timepicker timepicker col-md-3"
-										data-provide="timepicker" data-template="dropdown"
-										th:field="*{duration}" data-minute-step="1"
-										data-show-meridian="false" data-max-hours="8"
-										data-default-time="01:00" type="text" required="true"
-										th:value="${{meetingForm.startTime}}"
-										placeholder="Duration e.g., 01:30" />
-									<div th:if="${#fields.hasErrors('duration')}"
-										th:errors="*{duration}" class="form-control-feedback">Error
-										duration</div>
+									<label class="control-label">Duration</label>
+									<div class="input-group"  th:classappend="${#fields.hasErrors('duration')}?'has-error':''">
+										<span class="input-group-addon"><i
+											class="glyphicon glyphicon-bell"></i></span> <input
+											id="durationpicker"
+											class="form-control border-input bootstrap-timepicker timepicker col-md-3"
+											data-provide="timepicker" data-template="dropdown"
+											th:field="*{duration}" data-minute-step="1"
+											data-show-meridian="false" data-max-hours="8"
+											data-default-time="01:00" type="text" required="true"
+											th:value="${{meetingForm.startTime}}"
+											placeholder="e.g., 01:30" />
+									</div>
+									<label th:if="${#fields.hasErrors('duration')}"
+										th:errors="*{duration}" class="text-danger">Error
+										duration</label>
 								</div>
 							</div>
 						</div>
@@ -112,19 +126,25 @@
 
 
 
-
-						<div class="input-group"
-							th:classappend="${#fields.hasErrors('emails')} ? has-danger">
-							<span class="input-group-addon"><i
-								class="glyphicon glyphicon-user"></i></span> <input
-								class="form-control border-input" type="email" id="new_email"
-								placeholder="Enter email" />
-							<div th:if="${#fields.hasErrors('emails')}" th:errors="*{emails}"
-								class="form-control-feedback">Error emails</div>
-							<span class="input-group-btn">
-								<button id="add_field_button" class="btn btn-success">Add</button>
-							</span>
+						<div class="row">
+							<div class="col-md-5">
+								<div class="form-group">
+									<label class="control-label">Add participant</label>
+									<div class="input-group" th:classappend="${#fields.hasErrors('emails')}?'has-error':''">
+										<span class="input-group-addon"><i
+											class="glyphicon glyphicon-user"></i></span> <input
+											class="form-control border-input" type="email" id="new_email"
+											placeholder="Enter email" /> <span class="input-group-btn">
+											<button id="add_field_button" class="btn btn-default">Add</button>
+										</span>
+									</div>
+									<label th:if="${#fields.hasErrors('emails')}"
+										th:errors="*{emails}" class="text-danger">Error
+										emails</label>
+								</div>
+							</div>
 						</div>
+
 						<table class="table">
 
 							<thead>
@@ -148,9 +168,8 @@
 								<button id="delete_button" class="btn btn-danger px-4">Delete</button>
 							</div>
 							<div class="col-12 text-right">
-								<button value="Create" type="submit"
-									class="btn btn-success px-4">Create</button>
-								<a th:href="@{/listMeeting}" class="btn btn-warning px-4">Cancel</a>
+								<button value="Create" type="submit" class="btn btn-primary">Create</button>
+								<a th:href="@{/listMeeting}" class="btn btn-default">Cancel</a>
 							</div>
 						</div>
 					</form>
