--- a/vcbridge-admin/application/src/main/resources/templates/layout.html
+++ b/vcbridge-admin/application/src/main/resources/templates/layout.html
@@ -21,12 +21,15 @@
 
 <!-- Main styles for this application -->
 <link href="/resources/css/bootstrap.min.css" rel="stylesheet" />
-<link href="/resources/css/paper-dashboard.css" rel="stylesheet" />
-<link rel="stylesheet" href="/resources/css/bootstrap-datetimepicker.min.css" />
+<!-- <link href="/resources/css/paper-dashboard.css" rel="stylesheet" /> -->
+<link rel="stylesheet"
+	href="/resources/css/bootstrap-datetimepicker.min.css" />
 <!-- Icons -->
-<link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+<link
+	href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
+	rel="stylesheet">
 <!-- <link href="/resources/css/font-awesome.min.css" rel="stylesheet" /> -->
-<link href="/resources/css/themify-icons.css" rel="stylesheet" />
+<!-- <link href="/resources/css/themify-icons.css" rel="stylesheet" /> -->
 <!-- <link
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 	rel="stylesheet" /> -->
@@ -86,63 +89,93 @@
 
 </head>
 
-<!-- BODY options, add following classes to body to change options
-
-// Header options
-1. '.header-fixed'					- Fixed Header
-
-// Sidebar options
-1. '.sidebar-fixed'					- Fixed Sidebar
-2. '.sidebar-hidden'				- Hidden Sidebar
-3. '.sidebar-off-canvas'		- Off Canvas Sidebar
-4. '.sidebar-compact'				- Compact Sidebar Navigation (Only icons)
-
-// Aside options
-1. '.aside-menu-fixed'			- Fixed Aside Menu
-2. '.aside-menu-hidden'			- Hidden Aside Menu
-3. '.aside-menu-off-canvas'	- Off Canvas Aside Menu
-
-// Footer options
-1. '.footer-fixed'						- Fixed footer
-
--->
-
 
 
 <body class="app header-fixed">
-	<header class="app-header navbar">
-		<a class="navbar-brand" href="#" th:href="@{/}"></a>
-		<ul class="nav navbar-nav d-md-down-none">
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed"
+					data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+					aria-controls="navbar">
+					<span class="sr-only">Toggle navigation</span> <span
+						class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" th:href="@{/}">VCBridge Admin</a>
 
 
-			<li class="nav-item px-3"><a class="nav-link" href="#"
-				th:href="@{/listMeeting/scheduled}">My meetings</a></li>
-			<li class="nav-item px-3"><a class="nav-link" href="#"
-				th:href="@{/createMeeting}">Create meeting</a></li>
-			<li class="nav-item px-3"><a class="nav-link" href="#"
-				th:href="@{/emailTemplates}">Edit email templates</a></li>
-		</ul>
-		<ul class="nav navbar-nav ml-auto">
+			</div>
+			<ul class="nav navbar-nav">
 
-			<li class="nav-item dropdown"><a
-				class="nav-link dropdown-toggle nav-link" data-toggle="dropdown"
-				href="#" role="button" aria-haspopup="true" aria-expanded="false">
-					<span class="d-md-down-none" th:inline="text">[[${#httpServletRequest.remoteUser}]]</span>
-			</a>
-				<div class="dropdown-menu dropdown-menu-right">
+				<li class=""><a th:href="@{/listMeeting/scheduled}"><i
+						class="fa fa-list "></i> Meetings</a></li>
+				<li class=""><a th:href="@{/createMeeting}"><i
+						class="fa fa-pencil "></i> Create</a></li>
+				<li class=""><a th:href="@{/emailTemplates}"><i
+						class="fa fa-wrench "></i> Email Templates</a></li>
+			</ul>
+			<div id="navbar" class="navbar-collapse collapse">
+				<!--------------------------->
+				<ul class="nav navbar-nav navbar-right">
+					<li class="dropdown"><a href="#" class="dropdown-toggle"
+						data-toggle="dropdown"> <span class="glyphicon glyphicon-user"></span>
+							<strong th:inline="text">[[${#httpServletRequest.remoteUser}]]</strong>
+							<span class="glyphicon glyphicon-chevron-down"></span>
+					</a>
+						<ul class="dropdown-menu">
+							<li>
+								<div class="navbar-login">
+									<div class="row">
+										<div class="col-lg-4">
+											<p class="text-center">
+												<span class="glyphicon glyphicon-user icon-size"></span>
+											</p>
+										</div>
+										<div class="col-lg-8">
+											<p class="text-left">Profile</p>
+											<p class="text-left">
+												<strong> </strong>
+											</p>
+											<p class="text-left small"></p>
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="divider"></li>
+							<li>
+								<div class="navbar-login navbar-login-session">
+									<div class="row">
+										<div class="col-lg-12">
+											<p>
+												<a th:href="@{/logout}" class="btn btn-danger btn-block">Logout</a>
+											</p>
+										</div>
+									</div>
+								</div>
+							</li>
+						</ul></li>
+				</ul>
 
-					<div class="dropdown-header text-center">
-						<strong>Account</strong>
+				<!----------- --------------->
+				<form class="navbar-form navbar-right" method="get"
+					action="/web/search/">
+					<div class="form-group">
+						<input type="text" placeholder="Search" name="q" id="q" value=""
+							class="form-control">
 					</div>
+					<button type="submit" class="btn btn-success">Go</button>
+				</form>
 
-					<a class="dropdown-item" th:href="@{/logout}"><i
-						class="fa fa-lock"></i> Logout</a>
-					<!-- <a class="dropdown-item" href="#"><i class="fa fa-lock"></i> Logout</a> -->
-				</div></li>
+			</div>
+			<!--/.navbar-collapse -->
 
 
-		</ul>
-	</header>
+		</div>
+	</nav>
+
+
+
 
 	<div class="app-body">
 		<!-- Main content -->
@@ -158,23 +191,26 @@
 			</div>
 		</div>
 
-		<main class="main-panel" layout:fragment="content"> <!-- Breadcrumb -->
+		<div class="main-panel" layout:fragment="content">
 
 
 
 
-		<!-- /.conainer-fluid --> </main>
+			<!-- /.conainer-fluid -->
+		</div>
 
 
 
 
 	</div>
-
-	<footer class="app-footer">
-		<a href="#">CSP</a> &copy; 2017. <span class="float-right">Powered
+	
+	<div class="footer navbar-fixed-bottom">
+	<a href="#">CSP</a> &copy; 2017. <span class="float-right">Powered
 			by <a href="http://sastix.com">Sastix</a>
 		</span>
-	</footer>
+	</div>
+
+
 
 	<!-- Bootstrap and necessary plugins -->
 	<script src="/resources/js/jquery-1.10.2.js"></script>
@@ -196,7 +232,8 @@
 
 	<!-- <script src="resources/js/app.js"></script> -->
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script> -->
-<script type="text/javascript" src="/resources/js/bootstrap-datetimepicker.min.js"></script>
+	<script type="text/javascript"
+		src="/resources/js/bootstrap-datetimepicker.min.js"></script>
 	<!-- Datetime picker -->
 
 	<script
@@ -204,7 +241,7 @@
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/js/bootstrap-datepicker.min.js"></script>
 
-	<script src="/resources/js/paper-dashboard.js"></script>
+	<!-- <script src="/resources/js/paper-dashboard.js"></script> -->
 	<!-- <script type="text/javascript">$(function() {
 		console.log('hahahaah');
 		$('#datetimepicker1').datetimepicker();
